Creamos los archivos necesarios para integrar la estructura de Turnos, Doctores y Pacientes con la autenticacion de los usuarios y la integracion de los planes de cobertura

--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,10 @@ yarn-error.log*
 appsettings.Development.json
 appsettings.Local.json
 
+# User Secrets
+.usersecretsrc
+secrets.json
+
 # Rider
 .idea/
 *.sln.iml
